5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1679_1879.log
== TEST (2019-04-26 22:11:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a, "extras" e b "de falta")

if(H > 400)
H = a - 1/4 * b
print(round(H, 2))
elif(H <= 200)
H = a - 1/4 * b
print(round(H, 2))
else:
print(round(H, 2))	
-- ERROR:
File "XXXX", line 4
    print(a, "extras" e b "de falta")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:12:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a, "extra e", b, "de falta")
if(H > 400)
H = a - 1/4 * b
print(round(H, 2))
elif(H <= 200)
H = a - 1/4 * b
print(round(H, 2))
else:
print(round(H, 2))	
-- ERROR:
File "XXXX", line 5
    if(H > 400)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:13:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a, "extra e", b, "de falta")

if(H > 400)
	H = a - 1/4 * b
	print(round(H, 2))
elif(H <= 400)
	H = a - 1/4 * b
	print(round(H, 2))
else:
	print(round(H, 2))	
-- ERROR:
File "XXXX", line 6
    if(H > 400)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:15:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a, "extra e", b, "de falta")

if(H > 400 == R$ 500)
	H = a - 1/4 * b
	print(round(H, 2))
elif(H <= 400 == R$ 100)
	H = a - 1/4 * b
	print(round(H, 2))
else:
	print(round(H, 2))	
-- ERROR:
File "XXXX", line 6
    if(H > 400 == R$ 500)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:15:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a, "extra e", b, "de falta")

if(H > 400 == "R$" 500)
	H = a - 1/4 * b
	print(round(H, 2))
elif(H <= 400 == "R$" 100)
	H = a - 1/4 * b
	print(round(H, 2))
else:
	print(round(H, 2))	
-- ERROR:
File "XXXX", line 6
    if(H > 400 == "R$" 500)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:16:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a, "extra e", b, "de falta")

if(H > 400 == "Melhor fincionario"):
	H = a - 1/4 * b
	print(round(H, 2))
elif(H <= 400 == "Padrao"):
	H = a - 1/4 * b
	print(round(H, 2))
else:
	print(round(H, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(H > 400 == "Melhor fincionario"):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:17:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a, "extra e", b, "de falta")

if(H > 400 == "Melhor funcionario"):
	H = a - 1/4 * b
	print(round(H, 2))
elif(H <= 400 == "Padrao"):
	H = a - 1/4 * b
	print(round(H, 2))
else:
	print(round(H, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(H > 400 == "Melhor funcionario"):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:19:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a, "extra e", b, "de falta")

if(a > 400 == "Melhor funcionario"):
	H = a - 1/4 * b
	print(round(H, 2))
elif(b <= 400 == "Padrao"):
	H = a - 1/4 * b
	print(round(H, 2))
else:
	print(round(H, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(H, 2))	
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:19:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a, "extra e", b, "de falta")

if(a > 400 == "Melhor funcionario"):
	h = a - 1/4 * b
	print(round(h, 2))
elif(b <= 400 == "Padrao"):
	h = a - 1/4 * b
	print(round(h, 2))
else:
	print(round(h, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(h, 2))	
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:28:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H<=400):
	print("R$ 500.00")
elif(H>=400):
	print("R$ 100.00")
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 100.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:29:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>400):
	print("R$ 500.00")
elif(H<=400):
	print("R$ 100.00")
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:29:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>400):
	print("R$ 500.00")
elif(H<=400):
	print("R$ 100.00")
	
-- EXECUTION TIME:
0.170285
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:29:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print("R$ 500.00")
elif(H<=400):
	print("R$ 100.00")
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:30:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print("R$ 500.00")
elif(H<=400):
	print("R$ 100.00")
	
-- EXECUTION TIME:
0.200657
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.209848
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.16592
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.147783
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.236961
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.117882
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.309782
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.315933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.290647
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.355912
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.683587
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1879/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.681649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.571064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.317303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.550894
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1879/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.742676
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.529686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.591035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.634477
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.203735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.414013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.51205
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.74504
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.518336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.42241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ ", 2))
elif(H<=400):
	print(round("R$ ", 2))
	
-- EXECUTION TIME:
0.287031
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 9, in <module>
    print(round("R$ ", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:34:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ 500.00", 2))
elif(H<=400):
	print(round("R$ 100.00", 2))
	
-- EXECUTION TIME:
0.143956
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 7, in <module>
    print(round("R$ 500.00", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:34:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print(round("R$ 500.00", 2))
elif(H<=400):
	print(round("R$ 100.00", 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("R$ 500.00", 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:36:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	print("R$",round(, 2))
elif(H<=400):
	print("R$",round(, 2))
	
-- ERROR:
File "XXXX", line 7
    print("R$",round(, 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:38:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:38:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- EXECUTION TIME:
0.155453
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:38:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- EXECUTION TIME:
0.152711
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:38:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- EXECUTION TIME:
0.113346
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:38:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- EXECUTION TIME:
0.213093
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:38:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- EXECUTION TIME:
0.101666
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:38:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- EXECUTION TIME:
0.0992739
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:38:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:39:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- EXECUTION TIME:
0.137515
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:39:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:40:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500
	print("R$",round(r, 2))
elif(H<=400):
	r=100
	print("R$",round(r, 2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:40:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500.00
	print("R$",round(r, 2))
elif(H<=400):
	r=100.00
	print("R$",round(r, 2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:41:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500.00
	print("R$",round(r, 2))
elif(H<=400):
	r=100.00
	print("R$",round(r, 2))
	
-- EXECUTION TIME:
0.136687
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:47:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("numero de horas extra: "))
b=float(input("numero de horas de falta: "))
print(a,"extras e",b,"de falta")
H=a-1/4*b
if(H>=400):
	r=500.00
	print("R$",round(r, 2))
elif(H<=400):
	r=100.00
	print("R$",round(r, 2))
	
-- EXECUTION TIME:
0.193775
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
